export const snapshot = {};

snapshot[`/help 1`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==4=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "1/5",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==1=next",
            label: "Next",
            style: 2,
            type: 2,
          },
          {
            custom_id: "gacha=user_id",
            label: "/gacha",
            style: 2,
            type: 2,
          },
          {
            custom_id: "now=user_id",
            label: "/now",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "1.",
        },
        description: "Before anything: You will need characters.

__You get a free pull every 30 minutes (maxed at 5 pulls)__. Use \`/now\` to check how many pulls you have and how much time is left until your pulls recharge.

__Characters are exclusive__, once a player on the server finds a character, no one else can find that character in gacha again. You will need trade to get them.

__Characters vary in ranks from 1<:smol_star:1088427421096751224>to 5<:smol_star:1088427421096751224>__ A character rating is based on their popularity (as of right now, a character rating cannot be raised).

__Gacha rates depend on multiple variables__, but generally speaking the chances of a 5<:smol_star:1088427421096751224>appearing is equal or less than 1%.

\`/pull\` allows you to do gacha pulls with no animations.
​",
        footer: {
          text: "aliases: /w, /q",
        },
        title: "\`/gacha\`",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;

snapshot[`/help 2`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==0=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "2/5",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==2=next",
            label: "Next",
            style: 2,
            type: 2,
          },
          {
            custom_id: "cstars=5=user_id",
            label: "/collection stars 5",
            style: 2,
            type: 2,
          },
          {
            custom_id: "cstars=4=user_id",
            label: "/collection stars 4",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "2.",
        },
        description: "You will need a party to use combat features, but all combat features are still in development, so parties are only an aesthetic right now.

__You can't have more than 1 party__ or save your current party to a preset and switch between presets.

__The more your party members are familiar with each other the better they preform__. This is called synergy, five party members from the same anime are better than 5 members from a mix of different media.

\`/party view\` to see your current party.

\`/party assign name: spot:\` to assign a character you have to your party;
leaving the \`spot:\` empty will assign the character to the first empty spot or override the last spot.

\`/collection\` can be used to browse your characters and select your potential party members.
​",
        footer: {
          text: "aliases: /team, /p",
        },
        title: "\`/party\`",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;

snapshot[`/help 3`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==1=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "3/5",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==3=next",
            label: "Next",
            style: 2,
            type: 2,
          },
          {
            label: "Full Roadmap",
            style: 5,
            type: 2,
            url: "https://github.com/ker0olos/fable/issues/1",
          },
          {
            label: "GitHub",
            style: 5,
            type: 2,
            url: "https://github.com/ker0olos/fable",
          },
        ],
        type: 1,
      },
      {
        components: [
          {
            label: "Discord Support Server",
            style: 5,
            type: 2,
            url: "https://discord.gg/H69RVBxeYY",
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "Roadmap",
        },
        description: "__**Releasing in the near future (5 days ~ 2 months)**__

**[Customization](https://github.com/ker0olos/fable/issues/57)**
Allow players to customize their characters including images and names.

**[Synthesis](https://github.com/ker0olos/fable/issues/76)**
Merging 1-4<:smol_star:1088427421096751224>characters to get specific grade pulls (e.g. Synthesizing five 1-star characters gives a pull where you are guaranteed a 2-star character).

**[Stealing](https://github.com/ker0olos/fable/issues/49)**
You will be able to steal characters from other users.",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;

snapshot[`/help 4`] = `
{
  data: {
    attachments: [
    ],
    components: [
      {
        components: [
          {
            custom_id: "help==2=prev",
            label: "Prev",
            style: 2,
            type: 2,
          },
          {
            custom_id: "_",
            disabled: true,
            label: "4/5",
            style: 2,
            type: 2,
          },
          {
            custom_id: "help==4=next",
            label: "Next",
            style: 2,
            type: 2,
          },
        ],
        type: 1,
      },
    ],
    embeds: [
      {
        author: {
          name: "All Commands",
        },
        description: "- \`/gacha\` \`/w\`: _start a new gacha pull_
- \`/pull\` \`/q\`: _start a quiet gacha pull with no animation_
- \`/now\` \`/vote\` \`/daily\` \`/tu\`: _check what you can do right now_
- \`/search\` \`/anime\` \`/manga\`: _search for specific media_
- \`/character\` \`/char\` \`/im\`: _search for a specific character_

- \`/party view\` \`/team view\` \`/p view\`: _view your current party_
- \`/party assign\` \`/team assign\` \`/p assign\`: _assign a character to your party_
- \`/party swap\` \`/team swap\` \`/p swap\`: _swap characters spots with each others_
- \`/party remove\` \`/team remove\` \`/p remove\`: _remove a character from your party_

- \`/collection list\` \`/coll list\` \`/mm list\`: _list user characters in bulks_
- \`/collection stars\` \`/coll stars\` \`/mm stars\`: _view user your stars_
- \`/collection media\` \`/coll media\` \`/mm media\`: _view user characters from a specific media_

- \`/found\` \`/obtained\` \`/owned\`: _list all characters found from a specific media_


- \`/image\` \`/custom\`: _change the image of a character_
- \`/nick\`: _change the nickname of a character_

- \`/trade\` \`/offer\`: _trade characters with another user_
- \`/give\` \`/gift\`: _give characters to another user_

- \`/anilist next_episode\`: _find when the next episode of an anime is airing_",
        type: "rich",
      },
    ],
  },
  type: 4,
}
`;
